<resources>
    <string name="app_name">Pishuvalko</string>

    <string name="start_game">ЗАПОЧНИ ДА УЧИШ</string>
    <string name="settings_game">ПОДЕСУВАЊА</string>
    <string name="exit_game">ИЗЛЕЗ</string>
    <string name="close_board">Close board.</string>
    <string name="previous_level">Previous level</string>
    <string name="next_level">Next level</string>
    <string name="choose_color">Избери боја</string>
    <string name="parents">Родители</string>
    <string name="capital_letters">Големи букви</string>
    <string name="lower_case_letters">Мали букви</string>
    <string name="numbers">Броеви</string>
    <string name="forms">Форми</string>
    <string name="reject">Одбиј</string>
    <string name="close">Затвори</string>
    <string name="confirm">Потврди</string>

    <string name="settings_sound">Звук</string>
    <string name="settings_language">Јазик</string>
    <string name="settings_share">Сподели</string>
    <string name="settings_about">За апликацијата</string>
    <string name="settings_share_via">Сподели преку ...</string>

    <string name="solved">Решени</string>
    <string name="unsolved">Нерешени</string>
    <string name="confirm_that_you_are_the_parent">Потврдете дека сте родителот</string>
    <string name="please_answer">Ве молам одговорете:</string>
    <string name="incorrect_answer">Одговор не е точен</string>

    <string name="areYouSure">Дали сте сигурни?</string>
    <string name="yes">Да</string>
    <string name="no">Не</string>

    <string name="about_title">Пишувалко</string>
    <string name="about_version">верзија 1.0</string>
    <string name="about_description">Апликацијата пишувалко е наменета за децата од предучилишна возраст полесно да го совладаат пишувањето на буквите од македонската кирилична азбука , бројките и основните геометриски форми</string>

</resources>
