<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dip"
    tools:context="com.jane.antonio.pishuvalko.controllers.SettingsActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitCenter"
        android:background="@drawable/greenboardfinal" />


    <LinearLayout
        android:orientation="vertical"
        android:padding="@dimen/board_borders"
        android:layout_height="fill_parent"
        android:layout_width="fill_parent">

        <ImageView
            android:id="@+id/btn_close"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:contentDescription="@string/close_board"
            android:src="@drawable/exit_arrow"/>

    <LinearLayout
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:layout_gravity="center"
        android:layout_height="fill_parent"
        android:layout_width="fill_parent">


        <Button
            android:id="@+id/settings_bt_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:text="@string/settings_language"/>

        <Button
            android:id="@+id/settings_bt_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:text="@string/settings_about"/>

        <Button
            android:id="@+id/settings_bt_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:text="@string/settings_share"/>

        </LinearLayout>
    </LinearLayout>
</FrameLayout>
